--- a/KlinikaPlusWeb/Views/Shared/_Layout.cshtml
+++ b/KlinikaPlusWeb/Views/Shared/_Layout.cshtml
@@ -20,13 +20,12 @@
                 <div class="collapse navbar-collapse" id="navbarColor01">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#" style="color: white">
+                            <a class="nav-link" asp-controller="Prijemi" asp-action="Index" style="color: white">
                                 Prijemi
-                                <span class="visually-hidden">(current)</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" style="color: white">Ljekari</a>
+                            <a class="nav-link" asp-controller="Ljekari" asp-action="Index" style="color: white">Ljekari</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="Pacijenti" asp-action="Index" style="color: white">Pacijenti</a>
