--- a/KlinikaPlusWeb/Views/Prijemi/Index.cshtml
+++ b/KlinikaPlusWeb/Views/Prijemi/Index.cshtml
@@ -86,7 +86,13 @@
                     </td>
                     <td>
                         <div class="w-100 btn-group" role="group">
-                            <a onclick="nalazPopup('@Url.Action("Create", "Nalazi", new{ pid = obj?.Id }, Context.Request.Scheme)', 'Dodaj nalaz')" class="btn btn-info mx-2" style="border-radius:2px;"><i class="bi bi-pencil-square"></i> Dodaj nalaz</a>
+                            @{
+                                if(obj?.NalazId==null){
+                                    <a onclick="nalazPopup('@Url.Action("Create", "Nalazi", new{ pid = obj?.Id }, Context.Request.Scheme)', 'Dodaj nalaz')" class="btn btn-info mx-2" style="border-radius:2px;"><i class="bi bi-pencil-square"></i> Dodaj nalaz</a>
+                                }else{
+                                    <button class="btn btn-warning mx-2" style="border-radius:2px;" disabled>Nalaz postoji</button>
+                                }
+                            }
                             <form method="post" asp-controller="Prijemi" asp-action="Delete" asp-route-id="@obj?.Id">
                                 <button type="submit" class="btn btn-danger mx-1" style="border-radius:2px;"><i class="bi bi-trash3"></i> Obriši</button>
                             </form>
