--- a/KlinikaPlusWeb/Views/Nalazi/Details.cshtml
+++ b/KlinikaPlusWeb/Views/Nalazi/Details.cshtml
@@ -13,7 +13,7 @@
 		<input type="hidden" asp-for="Prijem"/>
 		<div class="mb-3">
 			<label asp-for="TekstualniOpis">Tekstualni opis</label>
-			<input asp-for="TekstualniOpis" class="form-control" disabled/>
+			<textarea asp-for="TekstualniOpis" class="form-control" disabled rows="16"></textarea>
 			<span asp-validation-for="TekstualniOpis" class="text-danger"></span>
 		</div>
 		<div class="mb-3">
